# runflow

./: .gitignore  CHANGE_DATE.md  COMMERCIAL_LICENSE.md  Cargo.toml  LICENSE.md  NOTICE.md  README.md
.flow/registry/: plugins.json
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: AGENT_MVP_SPEC.md  DOCS_PLAN.md  agent-dev-book.md  index.html  registry.md
schemas/: plugin.schema.json
src/: cli.rs  config.rs  daemon.rs  dag.rs  engine.rs  events.rs  lib.rs  locks.rs  logs.rs  main.rs  manifest.rs  packages.rs  plugins.rs  projections.rs  registry.rs  retention.rs  scheduler.rs  schemas.rs  snapshots.rs  state.rs  storage.rs  supervisor.rs  workspace.rs
src/schema_defs/v1/: event.schema.json  manifest.schema.json  plugin-input.schema.json  plugin-output.schema.json  snapshot.schema.json  workflow.schema.json
