[package]
name = "runflow"
version = "0.1.1"
edition = "2024"
license = "MIT"

[lib]
name = "runflow"
path = "src/lib.rs"

[[bin]]
name = "flow"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
cron = "0.15"
jsonschema = "0.46.5"
petgraph = "0.8"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
